name:                api-etherchain
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/sigrlami/api-etherchain#readme
license:             MIT
license-file:        LICENSE
author:              Sergey Bushnyak
maintainer:          sergey.bushnyak@sigrlami.eu
copyright:           Copyright: (c) 2017 Sergey Bushnyak
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Etherchain
  other-modules:       Types
  build-depends:       base >= 4.7 && < 5
                     , http-conduit
                     , bytestring
                     , text
                     , time
                     , aeson
  default-language:    Haskell2010